constants created, tolist() used, remove sonar code smells